--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,9 +21,9 @@
 
       </div>
       <div class='buttons'>
-        <a href="academics" class="readme">Read More</a>
+        <a routerLink="academics" class="readme">Read More</a>
         <br>
-        <a href="address" class="contactme">Contact Me</a>
+        <a routerLink="address" class="contactme">Contact Me</a>
       </div>
     </div>
   </div>
